--- a/.github/workflows/test2.yaml
+++ b/.github/workflows/test2.yaml
@@ -10,6 +10,7 @@ on:
 jobs:
   test_job:
     runs-on: ubuntu-latest
+    environment: development
     steps:
       - name: Print Input
         run: |
